<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/appNameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_name_label"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="188dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameLabelTextView">

        <Button
            android:id="@+id/button_signIn"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_signIn_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/button_signUp"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_signUp_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>